# business-review-agent

./: .gitignore  README.md  langgraph.json  pyproject.toml
app/: context_retriever.py  data_analyst.py  router.py  streamlit_app.py
files/: README.md  account_health.csv  accounts.csv  generate_qbr_data.py  invoices.csv  qbr.db  subscriptions.csv  support_tickets.csv  usage_monthly.csv
files/docs_rag/: acme.md  globex.md  hooli.md  initech.md  soylent.md  umbrella.md
