[project]
name = "business-review-agent"
version = "0.1.0"
description = "Business Review Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "debugpy>=1.8.21",
    "dotenv>=0.9.9",
    "faker>=40.23.0",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.2",
    "langchain-tavily>=0.2.18",
    "langchainhub>=0.1.21",
    "langgraph>=1.2.6",
    "langgraph-cli[inmem]>=0.4.30",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
    "tiktoken>=0.13.0",
    "watchdog>=6.0.0",
]
